--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -22,3 +22,18 @@
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+
+#footer {
+  position: fixed;
+  background-color: #FEF5E7;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;            /* Footer height */
+}
+
+/* .footer {
+  position: relative;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+} */
